High Low Challenge, and Iterating Arrays

--- a/public/interating_arrays_js.html
+++ b/public/interating_arrays_js.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Inline JS</title>
+    <title>Iteration Array JS</title>
 </head>
 <body>
     <script>
-		var names = ['Sakib','Kinza','Haniyah','Umrah'];
+		var names = ['Sakib','Kinza','Haniyah'];
 		console.log(names.length);
-		console.log(names[0]);
-		console.log(names[1]);
-		console.log(names[2]);
-		console.log(names[3]);
+		console.log(names);
+		
+		for(var i = 0; i < names.length; i+=1) {
+			console.log(names[i]);
+		}
+
+		names.forEach(function (element, index, array) {
+			console.log('The name at index ' + index + ' is ' + element);
+		});
+
+		function iterateNames(element, index, array) {
+			console.log('The name at index ' + index + ' is ' + element);
+		}
+
+		names.forEach(iterateNames);
+
+		var names = ['Sakib', 'Kinza', 'Haniyah'];
+
+
+		names.forEach(function(names, index, array){
+			if(index > 0);
+
+			console.log('I am ' + names);
+			console.log('I am related to ' + array[index + 1]);
+
+			});
 
 </script>
 </body>
