Objects JSON and Math

--- a/public/objects_json_js.html
+++ b/public/objects_json_js.html
@@ -61,6 +61,7 @@ books.forEach(function(book, index, array) {
 	console.log("Book #" + (index + 1));
     console.log("Title: " + book.title);
     console.log("Author: " + book.author.firstName + " " +book.author.lastName);
+    console.log("Pages: " + book.pages);
     console.log("---");
 
 })
@@ -75,30 +76,3 @@ books.forEach(function(book, index, array) {
 	</script>
 </body>
 </html>
-
-
-	<!-- }
-	"Book": [
-	{"Bookn1": "12345"}
-	{"Bookn2": "98765"}
-	{"Bookn3": "19283"}
-	{"Bookn4": "91827"}
-	{"Bookn5": "56473"}
-
-	]
-	"Title": [
-	{"Title1": "Animal Farm"}
-	{"Title2": "1984"}
-	{"Title3": "The Next 100 Years"}
-	{"Title4": "Plato's Republic"}
-	{"Title5": "The Boondocks"}
-
-	]
-	"Author": [
-	{"firstName1": "George", "lastName": "Orwell"}
-	{"firstName2": "George", "lastName": "Orwell"}
-	{"firstName3": "George", "lastName": "Friedman"}
-	{"firstName4": "Plato", "lastName": "Philosopher"}
-	{"firstName5": "Aaron", "lastName": "McGruder"}
-
-	] -->
