--- a/public/bootstrap_intro.html
+++ b/public/bootstrap_intro.html
@@ -89,7 +89,7 @@
           </div>
         </div>
       </div>
-      <div class="exp">
+      <div class="etp">
         <div class="row">
           <div class="col-xs-4"><h5>Experience:</h5>
             <h4>Energy Transfer Partners</h4>
@@ -97,11 +97,17 @@
               <li>Business Analyst - Collected requirements for new release and updates for existing SAP FI/CO Functionality</li>
             </ul>
           </div>
+           <div class="cap">
+          <div class="row">
           <div class="col-xs-4"><br><h4>Capgemini</h4>
               <ul>
                 <li>Associate Consultant - Gathered requirements and presented proof of concept to clients on new implementations and enhancements to existing systems and processes</li>
               </ul>
           </div>
+        </div>
+      </div>
+       <div class="acn">
+        <div class="row">
           <div class="col-xs-4"><br><h4>Accenture</h4>
             <ul>
               <li>Systems Test Analyst - Created test case scenarios for the Department of Educations Student Loan program</li>
