--- a/public/inline_js.html
+++ b/public/inline_js.html
@@ -5,7 +5,44 @@
 </head>
 <body>
     <script>
-        console.log('Hello from Inline Javascript!')
+     var userChoice = prompt("Do you choose rock, paper or scissors?");
+	var computerChoice = Math.random();
+	if (computerChoice < 0.34) {
+		computerChoice = "rock";
+	} else if(computerChoice <= 0.67) {
+		computerChoice = "paper";
+	} else {
+		computerChoice = "scissors";
+	} console.log("Computer: " + computerChoice);
+
+	function compare(choice1, choice2) {
+    if (choice1 === choice2) {
+        alert("The result is a tie!");
+    }
+    else if (choice1==="scissors") {
+        if (choice2==="rock") {
+            alert("rock wins!");
+        }
+    }
+    else if (choice1==="scissors") {
+        if (choice2==="paper") {
+            alert("scissors win!");
+        }
+    }
+    else if (choice1==="paper") {
+        if (choice2==="rock") {
+            alert("paper wins!");
+    }
+        }
+    else if (choice1==="rock") {
+        if (choice2==="scissors") {
+            alert("rock wins!");
+        }
+            else {
+                alert("paper wins!");
+                }
+            }
+        }
     </script>
 </body>
 </html>
