JQuery, Google Maps,

--- a/public/google_maps_api.html
+++ b/public/google_maps_api.html
@@ -48,7 +48,7 @@
 
         // Create a new infoWindow object with content
         var infowindow = new google.maps.InfoWindow({
-            content: "Best and Spiciest Pakistani food outside of Pakistan!"
+            content: "Kohinoor - Best and Spiciest Pakistani food outside of Pakistan!"
         });
 
         // Open the window using our map and marker
