--- a/public/jquery_exercises.html
+++ b/public/jquery_exercises.html
@@ -4,6 +4,10 @@
 	<title>JQuery Exercise</title>
 </head>
 <body>
-	
+	<script>
+	$(document).ready(function() {
+	    alert( 'The DOM has finished loading!' );
+	});
+	</script>
 </body>
 </html>
