--- a/public/jquery_exercises.html
+++ b/public/jquery_exercises.html
@@ -10,14 +10,18 @@
     <script src="/js/jquery.js"></script>
     <script>
 	$(document).ready(function() {
-    $('.codeup').css('border', 'red solid 1px').css('width', '300px');
+    $('li').css('font-size', '20px').css('width', '200px');
+    $('h1, p, li').css('background-color', 'yellow').css('width', '280px');
+    $(document).ready(function() {
+    alert( 'Welcome to Codeup!' );
+});
 });
 	</script>
 </head>
 <body>
-    <h1>Welcome to Codeup</h1>
+    <h1>Welcome to Codeup!</h1>
     <div class="codeup">
-        <h3>CODEUP</h3>
+        <h3>CODEUP!</h3>
         <p>The first and only local Coding Bootcamp!!</p>
     </div>
     <div>
