--- a/public/jquery_faq.html
+++ b/public/jquery_faq.html
@@ -12,38 +12,42 @@
         "use strict";
 
         $(document).ready(function() {
-         $('#answers').click(function(event) {
+            $('ul').each(function(index) {
+                $(this).children().first().css('font-weight', 'bold')
+        $('li').click(function(event) {
                 event.preventDefault();
-                $('dd').fadeToggle('invisible');
+                $(this).parent().addClass('invisible');
+        $('h3').click(function(event) {
+                event.preventDefault();
+                $('li').parent().removeClass('invisible');
+            });
+            });
             });
         });
     </script>
 </head>
 <body>
-<h1 id="codeup">Frequently Asked Questions on National Parks!</h1>
-<dl>
-  <dt>What government agency oversees the National Parks?</dt>
-  <dd class='invisible'>Department of the Interior</dd>
-  <dt>How many employees are in the National Park Service?</dt>
-  <dd class='invisible'>Over 20,000</dd>
-  <dt>How old is the National Park Systen?</dt>
-  <dd class='invisible'>Stated August 25th, 1916</dd>
-  <dt>What is the largest National Park?</dt>
-  <dd class='invisible'>Wrangell-St. Elias National Park and Reserve - 13.2 Million Acres</dd>
-  <dt>What is the smallest National Park?</dt>
-  <dd class='invisible'>Thaddeus Kosciuszko National Memorial - .02 Acres</dd>
-  <dt>How many people visit the National Parks?</dt>
-  <dd class='invisible'>Over 200,000 people</dd>
-  <dt>What is the most visited National Park??</dt>
-  <dd class='invisible'>Golden Date National Recreation Area</dd>
-  <dt>What is the National Park Service budget?</dt>
-  <dd class='invisible'>As of FY 2014: $2.98 Billion</d>
-  <dt>How do I obtain a park pass</dt>
-  <dd class='invisible'>By visiting your nearest park</dd>
-  <dt>What role did the National Park Service have in the Deepwater Horizon oil spill response?
-</dt>
-  <dd class='invisible'>The National Park Service was an integral part of the national federal response to the explosion of the Deepwater Horizon drilling rig which occurred in the Gulf of Mexico on April 20, 2010</dd>
-</dl>
-    <a href="#" id="answers">Click here to find the answers!</a>
+<h3>Arches National Park</h3>
+<ul a href'#' class="park">
+    <li>Balanced Rock</li>
+    <li>Courthouse Towers</li>
+    <li>Dark Angel</li>
+    <li>Devil's Garden</li>
+</ul>
+<h3>Badlands National Park</h3>
+<ul a href='#' class="park">
+    <li>Indian Reservation</li>
+    <li>Boardwalk to the Windows</li>
+    <li>Cliff SHelf Nature Trail</li>
+    <li>Door Trail</li>
+</ul>
+<h3>Denali</h3>
+<ul a href='#' class="park">
+    <li>Kahiltna Glacier</li>
+    <li>Alaska</li>
+    <li>Fossils</li>
+    <li>Permafrost</li>
+</ul>
 </body>
 </html>
+<!-- Create jQuery code that adds the invisible class on the parent ul of any li that is clicked. -->
