--- a/public/jquery_test.html
+++ b/public/jquery_test.html
@@ -13,7 +13,7 @@
 
         $(document).ready(function() {
         $('li').click(function() {
-                $('.park').toggle();
+                $('.park').slideUp();
         $('li').click(function() {
                 $('.park').hide();
             });
