--- a/public/bootstrap_intro.html
+++ b/public/bootstrap_intro.html
@@ -63,6 +63,7 @@
             <li>Software Engineer</li>
             <li>Prolific Traveler</li>
             <li>Business Developer</li>
+            <li>Creative Entrepreneur</li>
           </ul>
       </div>
       <div class="modal-footer">
@@ -76,6 +77,8 @@
   		      <li>Software Engineer</li>
   		      <li>Prolific Traveler</li>
   		      <li>Business Developer</li>
+            <li>Creative Entrepreneur</li>
+
   	      </ul>
       </div>
       <div class="edu">
