--- a/public/resume.html
+++ b/public/resume.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Sakib Resume</title>
+<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="/css/resume.css">
+<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+<script src="/js/bootstrap.js"></script>
+<title>Who is Sakib Shaikh?</title>
 </head>
 <body>
-<link rel="stylesheet" href="/css/bootstrap.min.css">
-<script src="/js/bootstrap.min.js"></script>
+<div class='body'>
+	<div class="sakib">
+	<p class='h1'>Who is Sakib Shaikh?</p>
+	  <ul class='ul1'>
+	    <p>Software Engineer || Prolific Traveler || Business Developer || Creative Entrepreneur</p>
+	  </ul>
+	</div>
+    <div class="etp">
+    	<div class="row">
+	 		<div class="col-xs-10">
+			<p class='h2'>Energy Transfer Partners</p>
+			    <ul class='ul2'>
+			      <li>Business Analyst - Collected requirements for new release and updates for existing SAP FI/CO Functionality</li>
+			    </ul>
+			</div>
+		</div>
+	</div>
+ 	<div class="edu">
+	  <div class="row">
+	    <div class="col-xs-10"><p class='h3'>Education</p>
+	        <ul class='ul3'>
+	          <li>Master of Arts in International Relations</li>
+	          <li>Bachelor of Arts in Political Science</li>
+	          <li>Codeup: Full-Stack Web Development</li>
+	        </ul>
+	    </div>
+	  </div>
+	</div>
+	<div class="cap">
+      <div class="row">
+        <div class="col-xs-10"><p class='h4'>Capgemini</p>
+	        <ul>
+	          <li>Associate Consultant - Gathered requirements and presented proof of concept to clients on new implementations and enhancements to existing systems and processes</li>
+	        </ul>
+        </div>
+      </div>
+    </div>
+</div>
 </body>
 </html>
