--- a/public/ajax_blog.html
+++ b/public/ajax_blog.html
@@ -1,56 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel='stylesheet' type='type/css' href='css/ajax_blog_css.css'>
+
     <title>Sakib's Blog</title>
+
 </head>
-<body>
+<body class='body'>
+<div class="container">
+  <div class="jumbotron">
 
-<h1>My Blog</h1>
-
-<table id="blog">
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>Posts</th>
-            <th>Categories</th>
-            <th>Date</th>
-        </tr>
-    </thead>
-    <tbody id="blogData"></tbody>
-</table>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
-<script>
-(function() {
-    $(document).ready(function(){
-      $("#ref_butn").click(function(){
-     location.reload();
-      });
-    });
-    // TODO: Create an ajax GET request for /data/inventory.json
-   $.ajax("/data/blog.json");
-
-    // TODO: Take the data from inventory.json and append it to the products table
-    //       HINT: Your data should come back as a JSON object; use console.log() to inspect
-    //             its contents and fields
-    //       HINT: You will want to target #insertProducts for your new HTML elements
-     $.ajax("/data/blog.json").done(function(data) {
-
-        var blogInfo;
-
-        data.forEach(function(info) {
-             blogInfo += '<tr><td>' + info.title + '</td><td>' + info.posts + '</td><td>' + info.categories + '</td><td>' + info.date + '</td></tr>';
-
-             $('#blogData').html(blogInfo)
-        });
-        console.log("Data returned from server:");
-        console.log(data);
-    });
-
-})();
-</script>
-<button id="ref_butn">Refresh the page!</button>
-
+    <h1 id='header'>Sakib's Blog</h1>
+    <div class='container'>
+        <section id='posts'></section>
+    </div>
+  
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/ajax_blog_js.js"></script>
+  </div>
+</div>
 </body>
 </html>
