--- a/public/simple_simon.html
+++ b/public/simple_simon.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8"/>
+	<meta http-equiv="x-ua-compatible" content="ie-edge" />
+	<meta bane='viewport' content="width=device-width, initial-scale=1" />
 	<title>Simple Simon</title>
 	<h1>Welcome to Simple Simon</h1>
 	<script src="/js/jquery.js"></script>
@@ -9,8 +12,8 @@
 </head>
 <body>
 	<div id='circle'>
-	<div id='cone'>
+	<div id='coneRed'>
 	</div>
 	</div>
 </body>
-</html>
+</html>s
