--- a/public/coals.html
+++ b/public/coals.html
@@ -5,6 +5,7 @@
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="shortcut icon" href="/favicon.jpg">
     <title>More Coals, Please!</title>
   </head>
 
